prevent navbar from stacking on smaller screen

--- a/_sass/partials/_navbar.scss
+++ b/_sass/partials/_navbar.scss
@@ -34,6 +34,8 @@
 }
 
 .navbar__left {
+    max-width: 9rem; // so li doesnt stack
+
     ul {
         float: right;
     }
